# forex-bot

./: .env.example  .gitignore  all_strategies_backtest.py  auto_push.sh  backtest.py  backtest_app.py  bb_meanrev_backtest.py  breakout_backtest.py  broker.py  cc_audit.py  cc_v2_audit.py  commodities_backtest.py  consec_audit.py  crypto_backtest.py  ctrader_broker.py  d1_deep_audit.py  d1_strat_audit.py  dashboard.py  data.py  donchian_h4_backtest.py  double_size_backtest.py  ema_rsi_fade.py  energy_backtest.py  energy_timeframe_backtest.py  frequency_sweep.py  ftmo_risk_calibration.py  fvg_audit.py  fvg_closed_ids.json  fvg_scan.py  fvg_session_runner.py  get_token.py  h1_backtest.py  h1_runner.py  ib_ema_xau_audit.py  improvements_backtest.py  indices_backtest.py  intraday_scanner.py  journal.py  live_runner.py  m30_runner.py  (+42 more)
